UMB-382 -- Fixed header alignment bug

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_legacy.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_legacy.scss
@@ -94,7 +94,7 @@
   .header-proposition #proposition-links {
     @extend %clearfix;
     clear: both;
-    margin: 2px 0 0;
+    margin: 1px 0;
     padding: 0;
     display: none;
 
